rearranged endpoints for categories and categories-tree
